--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpackTutorial",
   "version": "1.0.0",
-  "description": "The code in this repository is based on [this](https://www.youtube.com/watch?v=DcrZB69UJeo&list=PLoPbpxdbeMjNU9KlTz0I7vxxNSseg0Y8m) webpack tutorial.",
+  "description": "webpack tutorial",
   "main": "index.js",
   "scripts": {
     "dev": "webpack",
@@ -18,6 +18,9 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
+    "imagemin": "^7.0.1",
+    "imagemin-pngquant": "^8.0.0",
+    "img-loader": "^3.0.1",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
